--- a/css/style.css
+++ b/css/style.css
@@ -1142,6 +1142,10 @@ a{
 .benefits__maps{
     width: 50%;
 }
+.benefits__maps-item {
+    width: 100%;
+    height: 450px;
+}
 .benefits__slider {
     min-width: 0;
     width: 50%;
@@ -1353,10 +1357,6 @@ a{
     margin-bottom: 30px;
 }
 
-.link-pdf svg:hover ~ .documents__text{
-    text-decoration: underline;
-}
-
 .documents__list .link-pdf{
     margin-top: 0;
 }
@@ -1373,6 +1373,10 @@ a{
     font-size: 24px;
     line-height: 1.5;
     transition: 0.3s;
+}
+
+.link-pdf span:hover ~ .documents__text{
+    text-decoration: underline;
 }
 
 .documents__text:hover{
@@ -1813,13 +1817,14 @@ a{
     transition: 0.3s;
 }
 
-.checkbox input[type="checkbox"] {
+.checkbox input[type="radio"] {
 	position: absolute;
 	z-index: -1;
 	opacity: 0;
 	margin: 10px 0 0 20px;
 }
 .checkbox__text {
+    display: block;
 	position: relative;
 	padding: 0 0 0 60px;
 	cursor: pointer;
@@ -1852,13 +1857,13 @@ a{
 	box-shadow: 0 2px 5px rgba(0,0,0,.3);
 	transition: .2s;
 }
-.checkbox input[type="checkbox"]:checked + .checkbox__text:before {
+.checkbox input[type="radio"]:checked + .checkbox__text:before {
 	background: #c2ddcd;
 }
-.checkbox input[type="checkbox"]:checked + .checkbox__text:after {
+.checkbox input[type="radio"]:checked + .checkbox__text:after {
 	left: 26px;
 }
-.checkbox input[type="checkbox"]:focus + .checkbox__text:before {
+.checkbox input[type="radio"]:focus + .checkbox__text:before {
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.2), 0 0 0 1px rgba(0, 0, 0, 0.5);
 }
 
@@ -1884,10 +1889,6 @@ a{
     flex-wrap: wrap;
     text-align: center;
     
-}
-.home__deadline-quarter,
-.home__deadline-passed {
-   
 }
 
 .home__deadline-quarter:hover,
